# security-posture-platform

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .semgrepignore  Makefile  README.md  ROADMAP.md  RUN-WINDOWS.md  docker-compose.yml  env.example  package-lock.json  package.json  posture.csv  ruff.toml
services/api/: Dockerfile  pyproject.toml
services/api/app/: ai_anomaly.py  ai_client.py  ai_context_builder.py  alert_clusterer.py  alert_enricher.py  alerts_v2.py  approval_service.py  attack_graph.py  attack_lab.py  attack_surface.py  audit.py  automation_executor.py  campaign_tracker.py  db.py  db_migrate.py  dedupe_service.py  demo_seed.py  detections.py  errors.py  intel_confidence_service.py  logging_config.py  main.py  metrics.py  notification_service.py  playbook_engine.py  policy_eval.py  queue.py  rate_limit.py  repository_scan.py  request_context.py  risk_engine.py  risk_features.py  risk_labels.py  risk_model.py  risk_scoring.py  risk_training.py  rollback_service.py  settings.py  severity_engine.py  suppression.py  (+4 more)
services/api/tests/: test_ai_alert_guidance.py  test_ai_alert_guidance_guardrails.py  test_ai_anomaly.py  test_ai_asset_diagnosis.py  test_ai_feedback_routes.py  test_ai_finding_explanation_guardrails.py  test_ai_incident_summary_guardrails.py  test_ai_job_triage.py  test_ai_policy_summary.py  test_ai_policy_summary_guardrails.py  test_assets_findings_rbac.py  test_attack_graph_routes.py  test_attack_lab_routes.py  test_attack_surface_routes.py  test_audit_mutating_routes.py  test_auth_oidc.py  (+23 more)
services/queue/: README.md  pyproject.toml
(+235 files in other folders)
