[project]
name = "secplat-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.6",
  "pydantic==2.8.2",
  "pydantic-settings==2.4.0",
  "sqlalchemy==2.0.32",
  "psycopg[binary]==3.2.1",
  "httpx==0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
