[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "secplat-queue"
version = "0.1.0"
description = "Minimal Redis Streams client for SecPlat"
requires-python = ">=3.10"
dependencies = ["redis>=5.0.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["secplat_queue*"]
